2020-10-29  KAWANO Toshihiko  <kawano@lanl.gov>

	* test/decetest.sh (testcase): updated
	* test/input/input19.dece: new file
	test for "set OutPut file" added

	* source/groupstructure.h: updated
	VITAMINE-J 175 group structure added

2020-10-28  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/global.h (class GlobalOption): updated
	* source/deceglobaloption.cpp (optionSet): new function
	* source/deceoperation.cpp (DeceOutPutRedirectFile)
	(DeceOutPutResume): new functions
	global option "OutPut" added, and when this option is set,
	STDOUT is redirected to an extenal file

	* source/dece.cpp (DeceStoreData): updated
	DeceInitOptions() deleted, command-line -n option removed,
	since provided by the set command
	version 1.2.5 Jadeite

	* source/endflib.h: updated
	* source/endflib.cpp (ENDFLibPeek): updated
	allocated memory buffers in each object are dynamically
	changed depending on the data size
	DataSize type removed

2020-10-21  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFLibCopy): modified
	when larger object is copied, memory size will be re-adjusted

2020-10-20  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrPrintCrossSection): new function
	move all printing parts to this function
	
	* source/gfr.cpp (gfrSmatrixElement): new function
	print scattering matrix element

2020-09-10  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (geneCSdata2): updated
	dont insert thermal point in the charged particle reaction case

2020-09-08  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/masstable.cpp (qvalue): bug fixed
	MT50 for a charged particle reaction case missing

2020-08-26  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFExtract): updated
	remove \r when the input is a DOS file

2020-07-12  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFExtract): updated
	non-ASCII character scanner added

2020-07-10  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decetable34.cpp (DeceTableMF34): updated